RESOLVED FIXED231886
WebM with invalid size should fail to load with error
https://bugs.webkit.org/show_bug.cgi?id=231886
Summary WebM with invalid size should fail to load with error
Jean-Yves Avenard [:jya]
Reported 2021-10-18 01:25:11 PDT
WebM with invalid size should fail to load with error
Attachments
Patch (7.52 KB, patch)
2021-10-18 16:17 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (7.45 KB, patch)
2021-10-18 16:18 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (5.30 KB, patch)
2021-10-18 17:28 PDT, Jean-Yves Avenard [:jya]
no flags
Jean-Yves Avenard [:jya]
Comment 1 2021-10-18 01:27:04 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-10-18 16:17:01 PDT
Jean-Yves Avenard [:jya]
Comment 3 2021-10-18 16:18:56 PDT
Jer Noble
Comment 4 2021-10-18 16:35:10 PDT
Comment on attachment 441654 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=441654&action=review > LayoutTests/platform/mac/TestExpectations:2097 > +[ BigSur+ ] media/media-webm-invalid-check.html [ Pass ] Ironically, the way you wrote the test means it should pass on all ports; ports that don't support .webm files will just error out (correctly).
Jean-Yves Avenard [:jya]
Comment 5 2021-10-18 17:28:06 PDT
Created attachment 441663 [details] Patch Enable on all platform seeing that it should elegantly fail everywhere
EWS
Comment 6 2021-10-18 20:52:02 PDT
Committed r284434 (243196@main): <https://commits.webkit.org/243196@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441663 [details].
Note You need to log in before you can comment on or make changes to this bug.