Cherry-pick r284434. rdar://problem/77969801

WebM with invalid size should fail to load with error
    https://bugs.webkit.org/show_bug.cgi?id=231886
    rdar://77969801

    Reviewed by Jer Noble.

    Source/WebCore:

    libwebm for some elements are using a std::string or a std::vector<uint8_t>
    to store their content. Those have infallible memory allocators.
    We limit the size we allow the parser to use to some reasonable values.

    Test: media/media-webm-invalid-check.html

    * platform/graphics/cocoa/SourceBufferParserWebM.cpp:
    (WebCore::SourceBufferParserWebM::OnElementBegin):

    LayoutTests:

    * media/content/invalid-size.webm: Added.
    * media/media-webm-invalid-check-expected.txt: Added.
    * media/media-webm-invalid-check.html: Added.

    Canonical link: https://commits.webkit.org/243196@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284434 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.423@safari-612.3.6.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.3.6.1-branch@285679 268f45cc-cd09-0410-ab3c-d52691b4dbfc